# hexeditor

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-15-vim-hex-editor.md  2026-06-16-help-view.md  2026-06-18-visual-mode-differentiation.md
docs/superpowers/specs/: 2026-06-15-vim-hex-editor-design.md  2026-06-17-config-panel-design.md  2026-06-17-github-actions-ci-design.md  2026-06-17-insert-mode-fix-design.md  2026-06-18-visual-mode-differentiation-design.md
hexcore/: Cargo.toml
hexcore/src/: buffer.rs  commands.rs  config.rs  cursor.rs  file_io.rs  jump_list.rs  lib.rs  search.rs  undo.rs
hexview/: Cargo.toml
hexview/src/: app.rs  main.rs
hexview/src/ui/: command_bar.rs  config_view.rs  help_view.rs  hex_view.rs  mod.rs  status_bar.rs  tabs.rs
