[package]
name = "hexview"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "hedit"
path = "src/main.rs"

[dependencies]
hexcore = { path = "../hexcore" }
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
